# gen_shared_memory

./: CONTRIBUTING.md  Dockerfile  README.md  _config.yml  setup.cfg  setup.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  gen_shared_memory_bug_report.md  gen_shared_memory_feature_request.md
.github/workflows/: gen_shared_memory_docker_checker.yml  gen_shared_memory_package.yml  gen_shared_memory_package_checker.yml  gen_shared_memory_py_checker.yml  gen_shared_memory_python2_publish.yml  gen_shared_memory_python3_build.yml  gen_shared_memory_python3_publish.yml  gen_shared_memory_python_checker.yml  gen_shared_memory_toc.yml  gen_shared_memory_triage.yml  gen_shared_memory_triage_label.yml
docs/source/: conf.py  gen_shared_memory.pro.read_template.rst  gen_shared_memory.pro.rst  gen_shared_memory.pro.write_template.rst  index.rst  modules.rst
gen_shared_memory/: __init__.py
gen_shared_memory/conf/: gen_shared_memory.cfg  gen_shared_memory.logo  project.yaml
gen_shared_memory/conf/template/: Makefile.template  client.template  server.template  shared_memory.template
gen_shared_memory/pro/: __init__.py  read_template.py  write_template.py
gen_shared_memory/run/: gen_shared_memory_run.py
python-tool/conf/: gen_shared_memory.cfg  gen_shm.cfg
tests/: .coverage  gen_shared_memory  gen_shared_memory_coverage.json  gen_shared_memory_coverage.xml  gen_shared_memory_pro_test.py  gen_shared_memory_test.py  read_template_test.py  run_coverage.sh  write_template_test.py
tests/full_simple_new/: Makefile  client.c  server.c  shared_memory.h
tests/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_00e0f69f92611275___init___py.html  z_f2ea0de34f6ed39c___init___py.html  z_f2ea0de34f6ed39c_read_template_py.html  z_f2ea0de34f6ed39c_write_template_py.html
tests/latest_pro/: Makefile  client.c  server.c  shared_memory.h
tests/new_simple_test/: Makefile  client.c  server.c  shared_memory.h
