#
# Module
#     setup.cfg
# Copyright
#     Copyright (C) 2018 - 2024 Vladimir Roncevic <elektron.ronca@gmail.com>
#     gen_shared_memory is free software: you can redistribute it and/or modify
#     it under the terms of the GNU General Public License as published by the
#     Free Software Foundation, either version 3 of the License, or
#     (at your option) any later version.
#     gen_shared_memory is distributed in the hope that it will be useful, but
#     WITHOUT ANY WARRANTY; without even the implied warranty of
#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#     See the GNU General Public License for more details.
#     You should have received a copy of the GNU General Public License along
#     with this program. If not, see <http://www.gnu.org/licenses/>.
# Info
#     Defined setup for package gen_shared_memory.
#

[metadata]
name = gen_shared_memory
version = 1.0.0
author = Vladimir Roncevic
author_email = elektron.ronca@gmail.com
description = Code Generator Shared Memory
license=GPL 2024 Free software to use and distributed it.
long_description = file: README.md
long_description_content_type = text/markdown
keywords=memory map, code generator
platforms = any
url = https://vroncevic.github.io/gen_shared_memory
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires=
    ats-utilities